# PPGLM

./: .gitignore  CREATE_RELEASE_v0.3.0.md  Dockerfile.windows  FIX_RELEASE_ATTACH.md  MACOS_TROUBLESHOOTING.md  MICROSOFT_STORE_PUBLISHING_GUIDE.md  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.1_updated.md  RELEASE_SIGNING_GUIDE.md  RELEASE_TROUBLESHOOT.md  appxmanifest.xml  check-git.bat  check-git.ps1  check_icons.py  check_status.bat  commit-and-release.bat  commit-icons.bat  commit_and_push.py  commit_docs.py  commit_macos_fix.py  download_and_upload.py  fix-commits.bat  games_dictionary_part1.csv  games_dictionary_part2.csv  games_dictionary_part3.csv  games_dictionary_temp.csv  generate_part4.py  generate_part4_b.py  generate_part4_c.py  generate_part4_d.py  git_commit.py  git_push.bat  index.html  macos_build_log.txt  package.json  release-notes.md  verify_rgba.py  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.sync-conflict-20260407-112106-TIANBEE.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  main.rs  utils.rs
src-tauri/src/commands/: background_tasks.rs  database.rs  igdb.rs  import_export.rs  launcher.rs  listenbrainz.rs  matcher.rs  mod.rs  musicbrainz.rs  quick_add.rs  scanner.rs  vgmdb_commands.rs
src-tauri/src/db/: 001_init.sql  002_steam_data.sync-conflict-20260407-112106-TIANBEE.sql  003_igdb_integration.sql  004_folder_exclusions.sql  005_synopsis.sql  006_release_date.sql  007_scan_files_setting.sql  008_game_metadata.sql  009_igdb_slug.sql  010_game_enhancements.sql  (+10 more)
(+75 files in other folders)
